--- a/LightOff_DUPUY_version_graphique/src/projet/light/off/FenetreBienvenue.form
+++ b/LightOff_DUPUY_version_graphique/src/projet/light/off/FenetreBienvenue.form
@@ -23,22 +23,19 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="jScrollPane1" min="-2" pref="404" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="20" max="32767" attributes="0"/>
-          </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Component id="LANCER" min="-2" pref="172" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
           </Group>
+          <Component id="jScrollPane1" alignment="0" pref="424" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="jScrollPane1" min="-2" pref="181" max="-2" attributes="0"/>
-              <EmptySpace pref="39" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="202" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="LANCER" min="-2" pref="63" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
           </Group>
@@ -64,7 +61,7 @@
               <Font name="Segoe Print" size="14" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="  &#x9;&#x9;Bienvenue !&#xa;&#xa;R&#xe8;gle : pour gagner toutes les cases doivent &#xea;tre roses !&#xa;D&#xe9;fis bonus : terminer le je uen moins de 20 coups.&#xa;&#xa;Pour commencer une partie cliquez sur jouer !"/>
+            <Property name="text" type="java.lang.String" value="  &#x9;&#x9;Bienvenue !&#xa;&#xa;R&#xe8;gle : pour gagner toutes les cases doivent &#xea;tre roses !&#xa;D&#xe9;fis bonus : terminer le je uen moins de 20 coups.&#xa;&#xa;Pour commencer une partie cliquez sur jouer !&#xa;"/>
           </Properties>
         </Component>
       </SubComponents>
